--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pokemon-test",
+  "name": "pokemons-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://romul3003.github.io/pokemons-test",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
